Update Hero component: logo above, text & button below, remove scroll indicator, white text with red glow

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="NuTPAM 2k25 - Welcome, Players. The Game is About to Begin." />
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet"><meta property="og:title" content="NuTPAM 2k25 - Welcome, Players. The Game is About to Begin." />
     <meta property="og:description" content="A series of technical and non-technical games designed to test skill, intellect, and teamwork. Register now!" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
